
2007-05-14  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/files.all, doc/robot.all: Split the old README into two
	relevant parts, removing the ancient histories.

2007-05-13  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/Makefile, web/Makefile: Cleaning up, removing dead stuff.

	* bin/po-tidy-links, bin/postats-data, web/registry.cgi.in:
	Adjusting the shebangs.

2007-05-13  Benno Schulenberg  <benno@vertaalt.nl>

	* data/postats, data/registry, data/: Removal of generated files.

2007-05-13  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/maintainers.all, doc/leaders.all, doc/translators.all:
	Textual, grammatical, and layout tweaks.

2007-05-12  Benno Schulenberg  <benno@vertaalt.nl>

	* web/html-to-cgi, web/lib/htmlpage.py, web/lib/config.py,
	web/Makefile, Makefile: Small fixes, and configuring for
	a local website at Vrijschrift.

2007-05-12  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/iso-639, doc/poster, doc/fr-traduc.all,
	registry/more-disclaimers, registry/names-mule,
	web/to-html-for-tp-old, web/m17n99-to-html, web/m17n99.html:
	Removing old and obsolete stuff.
	
	* doc/index.html, doc/Makefile, web/layout.html: Accounting
	for removal of m17n99.html and fr-traduc.all.

2007-05-12  Benno Schulenberg  <benno@vertaalt.nl>
	* ChangeLog: Convert to UTF-8, correct some small things.

==========

2001-03-11  François Pinard  <pinard@iro.umontreal.ca>

	* bin/tp-robot: Let 2001 go.  Hmph!  I should rather let any valid
	date go, and check it is not set into the future...

2001-02-18  François Pinard  <pinard@iro.umontreal.ca>

	* bin/tp-robot (CheckPoFile.mime_fields): Add koi8-u.

2001-01-19  François Pinard  <pinard@iro.umontreal.ca>

	* web/lib/config.py: Taking care of lin2.

2000-10-01  François Pinard  <pinard@iro.umontreal.ca>

	* web/lib/registry.py (VERSION): Allow 2.0b1 forms, no dash.

2000-07-24  François Pinard  <pinard@iro.umontreal.ca>

	* web/Makefile: Create CGI and HTML directories as needed.
