@@ -1,84 +1,93 @@
 <!doctype HTML PUBLIC  "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
  <head>
-  <title>Welcome to the %(long_package_name)s site</title>
+  <title>Welcome at the Translation Project</title>
  </head>
  <body>
 
-  <h3>What is the %(long_package_name)s?</h3>
+  <p>The Translation Project (<b>TP</b> for short) aims to get maintainers
+   and translators of free software packages together, so that most computer
+   programs gradually become able to speak many languages.</p>
+   
+  <p>On these pages you find a
+   <a href="%(html_base)s/HTML/domains.html">list of packages</a> for which
+   translations are handled by the Translation Project, and a
+   <a href="%(html_base)s/HTML/teams.html">list of teams</a> that handle the
+   different languages.  Each team page offers contact information, pointing
+   to mailing lists and home pages.</p>
+   
+  <p>There is an explanation of why translators
+   <a href="%(html_base)s/HTML/whydisclaim.html">need to disclaim</a> the
+   copyright on their translations (not assign it, just disclaim it),
+   and an explanation of how to
+   <a href="%(html_base)s/HTML/robot.html">deal with the robot</a>
+   that handles the PO-file submissions.</p>
+   
+  <p>There are also detailed explanations for
+   <a href="%(html_base)s/HTML/maintainers.html">package maintainers</a>, for
+   <a href="%(html_base)s/HTML/leaders.html">team coordinators</a>, and for
+   <a href="%(html_base)s/HTML/translators.html">individual tranlators</a>.
+   If you still have any questions, you can write to
+   <a href="mailto:translation@translationproject.org">the TP coordinator</a>.</p>
 
-  <p>The %(long_package_name)s (or TP for short) aims to get the maintainers
-   of free software packages, benevolent translators (why not <em>you</em>!),
-   and users all together, so that computers and systems (like Linux or GNU)
-   gradually become able to speak many languages.  You may write to
-   <a href="mailto:translation@iro.umontreal.ca">the TP coordinator</a>.</p>
+  <h3>Translation tools</h3>
 
-  <p>You should find here various information about the %(long_package_name)s.
-   This is still a young Web site, and text will be added according to the
-   needs, as expressed by questions or comments from people.</p>
+  <p>The Translation Project makes a great deal of use of the package
+   <tt><b>gettext</b></tt>, but this is not an absolute requirement for
+   maintainers.  The real goal of this project is to encourage the existence of
+   translated programs, not being strict about a particular implementation of
+   the translation mechanics.  However, given the choice, you are invited
+   to use <tt><b>gettext</b></tt>.  You can find the latest version of this
+   package via <a href="http://www.gnu.org/order/ftp.html">GNU's mirror list</a>.
+   Please don't use versions older than 0.11, as those produce PO and POT
+   files in a format which the Translation Project is not able to handle
+   automatically.</p>
 
-  <h3>Where to get information</h3>
+  <p>To make translations, translators can make use of programs like
+   <a href="http://kbabel.kde.org/">KBabel</a> or
+   <a href="http://gtranslator.sourceforge.net/">gtranslators</a>. The
+   <a href="%(html_base)s/HTML/software.html">Tools page</a> points to these
+   and some others.</p>
 
-  <!-- ABOUT-NLS is out of date / 2001-10-03 16:49:45 CEST -ke- -->
-  <p>Recipes for using internationalized software, as a user, may vary from
-   package to package, yet as a mere rule of thumb, the
-   <a href="../ABOUT-NLS"><code>ABOUT-NLS</code> file</a> often applies.
-   This file is also distributed within packages where it is meaningful.</p>
-
-  <p>The pages for all the <a href="%(html_base)s/HTML/teams.html">Language
-   teams</a> are listed separately; the team pages will offer contact
-   information pointing to separate mailing lists and home pages.</p>
-
-  <p>Most files of the %(long_package_name)s are available individually at
+<!--
+  <p>Most files of the Translation Project are available individually at
    various places in the hierarchy of the
-   <a href=..>Central PO file registry</a> or nicely listed here by <a
-   href="%(html_base)s/HTML/domains.html">Textual domains</a>.  There are
-   European mirrors for this PO file registry:</p>
+   <a href=..>Central PO file registry</a> or nicely listed by <a
+   href="%(html_base)s/HTML/domains.html">Textual domains</a>.
+-->
 
+<!--There are European mirrors for this PO file registry:</p>
   <ul>
    <li><a href="ftp://ftp.unex.es/pub/gnu-i18n/po">ftp://ftp.unex.es</a></li>
-   <!--li><a
-   href="ftp://tiger.informatik.hu-berlin.de/pub/po">ftp://tiger.informatik.hu-berlin.de</a></li-->
+   <li><a
+   href="ftp://tiger.informatik.hu-berlin.de/pub/po">ftp://tiger.informatik.hu-berlin.de</a></li>
   </ul>
+-->
 
-  <h3>Software to use</h3>
+  <h3>Discussion</h3>
 
-  <p>If you are interested in discussions about translation related software
-   consider to join the technical discussion list at <a
-   href="http://lists.sourceforge.net/lists/listinfo/translation-i18n">http://lists.sourceforge.net/lists/listinfo/translation-i18n</a>
-   resp. <a
-   href="https://lists.sourceforge.net/lists/listinfo/translation-i18n">https://lists.sourceforge.net/lists/listinfo/translation-i18n</a>;
-   there is also an email interface to subscribing/unsubscribing, write a
-   message with a subject of "<code>help</code>" to <a
-   href="mailto:translation-i18n-request@lists.sourceforge.net">translation-i18n-request@lists.sourceforge.net</a>.
-   Problems localizing software packages, questions around the PO file format
-   and tools helping the translator are on topic here.</p>
+  <p>If you are interested in discussions about translating and
+   translation-related software, consider joining the technical discussion list at
+   <a href="http://lists.sourceforge.net/lists/listinfo/translation-i18n">
+   http://lists.sourceforge.net/lists/listinfo/translation-i18n</a>.
+   Problems with localizing software packages, questions about the PO-file format,
+   and tools for helping the translator are on topic here.</p>
 
-  <p>The %(long_package_name)s does a great use of
-   <code>%(package_name)s</code>, yet this should not be seen as an absolute
-   pre-requirement for maintainers.  The real goal is to favour the existence
-   of translated programs, rather than being strict about a particular
-   implementation of the translation mechanics.  Nevertheless, given the
-   choice, you are invited to use <code>%(package_name)s</code>.  Version
-   %(stable_version)s can be considered stable.  You may
-   <a href="ftp://ftp.gnu.org/gnu/gettext/">download the latest copy</a>.
-   Please use the official version 0.11 or better, if available (February
-   2002).  Avoid any version before 0.10.39; these older versions produce PO
-   files or PO Template files in a format
-   which the Translation Project is not able to handle without human
-   intervention.</p>
-
-  <h3>Miscellaneous issues</h3>
-
+<!--
   <p>The <a href=matrix.html>translation matrix</a> is updated from time to
   time, but should not be considered as a definitive reference.</p>
+-->
 
   <h3>Acknowledgements</h3>
 
-  This project is hosted at the <a href="http://www.iro.umontreal.ca/">
-  Department of Computer Science and Operational Research (DIRO)</a> of the
-  <a href="http://www.umontreal.ca">University of Montr&#xe9;al</a>.
-  We would like to thank the staff at DIRO for their ongoing support.
+  <p>For many years this project was hosted at the
+   <a href="http://www.iro.umontreal.ca/">Department of Computer Science
+   and Operational Research (DIRO)</a> of the
+   <a href="http://www.umontreal.ca">University of Montr&#xe9;al</a>.
+   We thank the staff at DIRO for their long-time support.
+   Since the summer of 2007 the project is hosted by
+   <a href="http://www.vrijschrift.org/">Vrijschrift</a>, which is sponsored by
+   <a href="http://www.xs4all.nl/">XS4all</a>.</p>
 
  </body>
 </html>
