@@ -3,41 +3,41 @@
  <head><title>The translation disclaimer</title></head>
  <body>
 
-  <p>For most packages collaborating with the Translation Project, the
-   translations should be disclaimed in writing by the translators, before
-   being accepted for inclusion in the distribution.  There are forms that
-   translators should fill once and send to the Free Software Foundation.
+  <p>For most packages that collaborate with the Translation Project, the
+   translations should be disclaimed in writing by the translators before
+   these translations are accepted for inclusion in the distributions.  There
+   is a form (see below) that translators should fill out and send to the
+   Free Software Foundation.
 
   <p>The Free Software Foundation acts like a kind of attorney that witnesses
    the disclaimer.  Some translators mis-read the translation disclaimer as
    assigning the translation works to the FSF, and are disturbed by this
-   impression.  This is not really the case.  Once again, the FSF acts as a
+   impression.  Such an assignment is not the case.  The FSF just acts as a
    recipient and attorney for your papers, not as an assignee.</p>
 
-  <p>The translator usually disclaims all translations he or she could produce
-   for any package.  Yet, precisely, the need for disclaimers is decided on a
-   per package basis.  When a maintainer asks for disclaimers, disclaimers are
-   needed for all translations coming from any team for that package.  For GNU
+  <p>A translator usually disclaims all translations he or she could produce
+   for any package.  Yet the need for disclaimers is decided on a per package
+   basis.  When a package maintainer requires disclaimers, disclaimers are
+   needed for that package for all translations coming from any team.  For GNU
    packages, maintainers do not really have a choice, as the GNU project
    requires disclaimers for almost all its packages.  For non-GNU packages,
    the choice is up to the package maintainer.  The safest for translators is
-   to fill and return disclaimers, in this way, they put themselves free, once
-   and for all, to work on all translations they will feel like, whether GNU
-   or not.</p>
+   to fill out and return disclaimers -- in this way they put themselves free,
+   once and for all, to work on all translations they will feel like, whether
+   GNU or not.</p>
 
-  <p>Unfilled forms are also available through the Web. Currently, only the
-     plain text version is available; we hope to provide other formats soon:</p>
+  <p>An unfilled form is available here, currently only a plain text version:</p>
 
   <ul>
-   <li><a href="../doc/DISCLAIM">Plain ASCII text</a>
+   <li><a href="../doc/DISCLAIM">Disclaimer (plain ASCII)</a>
   </ul>
 
   <p>The FSF noticed that the PDF version (and possibly others) of the
-   translation disclaimer does not include the question at the bottom asking
-   what team the person is translating for.  This is on the ASCII version, but
-   not many people use that, apparently.  It would probably our jobs easier to
-   make sure that all the versions included that part.  In the meantime,
-   please make sure you write for which team you intend to translate.
+   translation disclaimer did not include the question at the bottom asking
+   which team the person is translating for.  This is on the ASCII version, but
+   not many people use that, apparently.  It would probably make our jobs easier
+   to make sure that all the versions included that part -- in the meantime,
+   however, please make sure you write for which team you intend to translate.
 
   <p>Once you have the file, you should print it out on paper, fill it out and
    sign it with a pen, slip the results into a paper envelope, lick a stamp
@@ -52,7 +52,7 @@
    his/her team.  One full month is not an overestimate, and you will be
    notified when processing of your disclaimer is complete.
 
-  <p>File <a href="../registry/AUTHORS"><code>AUTHORS</code></a> holds a copy
+  <p>The file <a href="../registry/AUTHORS"><code>AUTHORS</code></a> holds a copy
    of all notifications received from the FSF.  The Translation Project robot
    does not read that information directly, however.  See the page for your
    own national team to see what the robot knows about you.</p>
